# sg

./: .gitignore  .gitmodules  LICENSE  README.md  cmakelog.sublime-syntax  sg.sublime-project
src/: CMakeLists.txt
src/editor/: CMakeLists.txt  CodeGenerator.cpp  CodeGenerator.h  ComponentEditor.cpp  ComponentEditor.h  ComponentList.cpp  ComponentList.h  ComponentMetaEditor.cpp  ComponentMetaEditor.h  ComponentPropertyMetaEditor.cpp  ComponentPropertyMetaEditor.h  ComponentSelector.cpp  ComponentSelector.h  ConnectDialog.cpp  ConnectDialog.h  Connection.cpp  Connection.h  Controller.cpp  Controller.h  Delegates.h  EntityEditor.cpp  EntityEditor.h  EntityGraphicsScene.cpp  EntityGraphicsScene.h  EntityList.cpp  EntityList.h  EntityPropertyEditor.cpp  EntityPropertyEditor.h  EntitySelector.cpp  EntitySelector.h  EnumMetaEditor.h  FormatString.cpp  FormatString.h  GameView.h  InitialSetup.cpp  InitialSetup.h  MainWindow.cpp  MainWindow.h  MessageBox.cpp  MessageBox.h  (+6 more)
src/game/: CMakeLists.txt  SgCodeGen.cpp  SgCodeGen.h  main.cpp
